Minor changes to docs

--- a/public/docs.html
+++ b/public/docs.html
@@ -23,7 +23,7 @@
 <h1 class="title">BikeShare Token Server</h1>
 </header>
 <p><img src="http://3.bp.blogspot.com/-SK8CvVbZrT0/TqlFEjIS4XI/AAAAAAAAA6s/wM2FyKrlWjk/s1600/PA240019.JPG" alt="bike rider on playground equipment"
-    title="Wicket Riding" height="200" /></p>
+    title="Wicked Riding" width="60%" /></p>
 <h2 id="users">Users</h2>
 <h3 id="token-acquisition">Token Acquisition</h3>
 <p>Use endpoints <code>GET /user/token&lt;bike-id&gt;</code> and <code>POST /user/token</code> to get a new token. Post request must contain a bikeid in the request body.</p>
